Like 70% solution. Biggest issue is that rows hidden by search filter widen the table (overflow-x scroll visible) and do not fully compress (gaps remain between visible data)

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
 
   .table,
   .table__body {
-    overflow: visible;
+    overflow-y: visible;
+    overflow-x: hidden;
     height: auto !important;
     width: auto !important;
   }
@@ -54,7 +55,8 @@ header {
 h1 {
   color: #333;
 }
-main.table {
+
+div.table {
   height: 90vh;
   background-color: #fff5;
 
@@ -69,7 +71,7 @@ main.table {
   width: 100%;
   height: 10%;
   background-color: #fff4;
-  padding: .8rem 1rem;
+  padding: .8rem .2rem;
 
   display: flex;
   justify-content: space-between;
@@ -80,7 +82,7 @@ main.table {
   width: 35%;
   height: 100%;
   background-color: #fff5;
-  padding: 0 .8rem;
+  padding: 0 .4rem;
   border-radius: 2rem;
 
   display: flex;
@@ -121,19 +123,18 @@ main.table {
   overflow: overlay;
 }
 
-
-.table__body::-webkit-scrollbar{
+.table__body::-webkit-scrollbar {
   width: 0.5rem;
   height: 0.5rem;
 }
 
-.table__body::-webkit-scrollbar-thumb{
+.table__body::-webkit-scrollbar-thumb {
   border-radius: .5rem;
   background-color: #0004;
   visibility: hidden;
 }
 
-.table__body:hover::-webkit-scrollbar-thumb{ 
+.table__body:hover::-webkit-scrollbar-thumb {
   visibility: visible;
 }
 
@@ -142,13 +143,16 @@ table {
   width: 100%;
 }
 
-table, th, td {
+table,
+th,
+td {
   border-collapse: collapse;
   padding: 0.5rem;
   text-align: left;
 }
 
-table, td {
+table,
+td {
   text-align: left;
 }
 
@@ -157,7 +161,8 @@ tfoot {
   background: var(--table-color);
 }
 
-thead, th {
+thead,
+th {
   position: sticky;
   top: 0;
   left: 0;
@@ -167,8 +172,39 @@ thead, th {
   text-transform: capitalize;
 }
 
-tbody tr:nth-child(even) {
-  background: color-mix(in srgb, var(--table-color), transparent 60%);
+tr:nth-child(even) {
+  background-color: var(--table-color);
+}
+
+tr {
+  --delay: .1s;
+  transition: .5s ease-in-out var(--delay), background-color 0s;
+}
+
+tr.hide {
+  opacity: 0;
+  transform: translateX(100%);
+}
+
+tr:hover {
+  background-color: rgba(37, 206, 37, 0.4) !important;
+}
+
+tr td {
+  transition: .2s ease-in-out;
+}
+
+tr.hide td,
+tr.hide td p {
+  padding: 0;
+  font: 0 / 0 sans-serif;
+  transition: .2s ease-in-out .5s;
+}
+
+tr.hide td img {
+  width: 0;
+  height: 0;
+  transition: .2s ease-in-out .5s;
 }
 
 td {
@@ -280,7 +316,7 @@ select {
   border-radius: 8px;
   padding: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  overflow-y: auto;
+  overflow: hidden;
   display: inline-block;
   text-align: center;
 }
@@ -376,7 +412,7 @@ select {
   transition: .2s ease-in-out;
 }
 
-.export__file .export__file-btn:hover { 
+.export__file .export__file-btn:hover {
   background-color: #fff;
   transform: scale(1.15);
   cursor: pointer;
@@ -389,7 +425,7 @@ select {
 .export__file .export__file-options {
   position: absolute;
   right: 0;
-  
+
   width: 12rem;
   border-radius: .5rem;
   overflow: hidden;
@@ -398,24 +434,24 @@ select {
   opacity: 0;
   transform: scale(.8);
   transform-origin: top right;
-  
+
   box-shadow: 0 .2rem .5rem #0004;
-  
+
   transition: .2s;
 }
 
-.export__file input:checked + .export__file-options {
+.export__file input:checked+.export__file-options {
   opacity: 1;
   transform: scale(1);
   z-index: 100;
 }
 
-.export__file .export__file-options label{
+.export__file .export__file-options label {
   display: block;
   width: 100%;
   padding: .6rem 0;
   background-color: #f2f2f2;
-  
+
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -423,18 +459,18 @@ select {
   transition: .2s ease-in-out;
 }
 
-.export__file .export__file-options label:first-of-type{
+.export__file .export__file-options label:first-of-type {
   padding: 1rem 0;
   background-color: #86e49d !important;
 }
 
-.export__file .export__file-options label:hover{
+.export__file .export__file-options label:hover {
   transform: scale(1.05);
   background-color: #fff;
   cursor: pointer;
 }
 
-.export__file .export__file-options img{
+.export__file .export__file-options img {
   width: 2rem;
   height: auto;
 }
